--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
+  <title>Take Notes App</title>
   <link href="toDo.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -22,10 +22,10 @@
 <body>
 
   <!-- NAVBAR -->
-<div class="row">
+<div class="row" style="--bs-gutter-x: 0rem !important">
   <div class=" col-sm-12 col-md-12 col-xs-12 col-lg-12">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="nav-design navbar-brand" href="#">To Do List</a>
+      <a class="nav-design navbar-brand" href="#">Take Notes App</a>
     
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,9 @@
             <a class="nav-link" href="#">Search </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Refresh</a>
+            <a class="nav-link" href="#" >              
+              Reset
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">List</a>
@@ -57,34 +59,37 @@
   </div>
 </div>
   <!-- Notes -->
-  <div class=" row">
+  <div class=" row" style="--bs-gutter-x: 0rem !important">
     <div class="col-md-12">
-      <form method="GET" class="submitNote">
-        <textarea class="createNote" placeholder="Take a note..." name="note"></textarea>
+      <form method="GET" class="submitNote ">
+        <textarea class="createNote text-bg-light" placeholder="Take a note..." name="note"></textarea>
         <button class="btn btn-outline-success my-2 my-sm-0 submitNote" type="submit">Submit</button>
       </form>
     </div>
   </div>
-  <div class="row">   
-    <div class="col-md-3 col-sm-4 col-xs-6"> 
-      <textarea class="box" id="1" placeholder="demo note"></textarea>
-    </div>
+ 
 
-    <div class="col-md-3 col-sm-4 col-xs-6">
-      <textarea class=" box" id="2" placeholder="demo note"></textarea>
-    </div>
-
-    <div class="col-md-3 col-sm-4 col-xs-6">
-      <textarea class="box" id="3" placeholder="demo note"></textarea>
-    </div>
-
-    <div class="col-md-3 col-sm-4 col-xs-6">
-      <textarea class=" box" id="4" placeholder="demo note"></textarea>
-    </div>
-  
+<div class="row row-cols-sm-3 row-cols-2 row-cols-md-4 g-4" style="--bs-gutter-x: 0rem !important ">
+  <!-- On click call function to make them invisble and not take space on website -->
+  <!-- On click make the note border not be black but shadowy -->
+  <!-- Upon clicking the note, open as MODAL:https://getbootstrap.com/docs/5.2/components/modal/ -->
+  <div class="col ">
+    <textarea class="card  text-bg-light box chooseNote" id="1" placeholder="demo note  "></textarea>
   </div>
 
+  <div class="col">
+    <textarea class=" card text-bg-light box" id="2" placeholder="demo note"></textarea>
+  </div>
 
+  <div class="col">
+    <textarea class="card text-bg-light mb-3 box " id="3" placeholder="demo note"></textarea>
+  </div>
+
+  <div class="col">
+    <textarea class=" card text-bg-light mb-3 box " id="4" placeholder="demo note"></textarea>
+  </div>
+
+</div>
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
