Add text and update notes

--- a/index.html
+++ b/index.html
@@ -2,87 +2,126 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Take Notes App</title>
-  <link href="toDo.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Take Notes App</title>
+	<link href="toDo.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
 
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
+	<!-- NAVBAR -->
 
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Refresh</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">List View</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-          
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+	<nav class="navbar navbar-expand-lg bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Refresh</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">List View</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Settings</a>
+					</li>
+
+				</ul>
+				<form class="d-flex" role="search">
+					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Search</button>
+				</form>
+			</div>
+		</div>
+	</nav>
 
 
 
 
-  <!-- Notes -->
-  <div class="row" style="--bs-gutter-x: 0rem !important ">
-    <div class="col-md-12 ">
-      <form method="GET" class="d-flex createNoteContainer">
-        <textarea class=" card text-bg-light w-50 createNote" placeholder="Take a note..." name="note"></textarea>      
-        <button class="btn btn-outline-success align-self-end" type="submit">Submit</button>
-      </form>
-    </div>
-  </div>
- 
+	<!-- Notes -->
+	<div class="row" style="--bs-gutter-x: 0rem !important ">
+		<div class="col-md-12 ">
+			<form method="GET" class="d-flex createNoteContainer">
+				<textarea class=" card text-bg-light w-50 createNote" id="writeNote" placeholder="Take a note..."
+					name="note"></textarea>
+				<button class="btn btn-outline-success align-self-end" type="button"
+					onclick='createNote()'>Submit</button>
+			</form>
+		</div>
+	</div>
 
-<div class="row row-cols-sm-3 row-cols-2 row-cols-md-4 g-4 " style="--bs-gutter-x: 0rem !important ">
-  <!-- On click call function to make them invisble and not take space on website -->
-  <!-- Upon clicking the note, open as MODAL:https://getbootstrap.com/docs/5.2/components/modal/ -->
-  <div class="col ">
-    <textarea class="card  text-bg-light box chooseNote" id="1" placeholder="demo note" onclick="showmodal()"></textarea>
-  </div>
+	<div class="container">
+		<div class="row row-cols-sm-3 row-cols-f2 row-cols-md-4 g-4 " style="--bs-gutter-x: 0rem !important "
+			id="notesResidence">
+			<!-- On click call function to make them invisble and not take space on website -->
 
-  <div class="col">
-    <textarea class=" card text-bg-light box" id="2" placeholder="demo note"></textarea>
-  </div>
+			<div class="col">
+				<section type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+					class="btn btn-primary card text-bg-light box chooseNote" id="note1" data-bs-whatever="Note 1">
+				</section>
+			</div>
+		</div>
+	</div>
 
-  <div class="col">
-    <textarea class="card text-bg-light mb-3 box " id="3" placeholder="demo note"></textarea>
-  </div>
+	
+	<!-- 	
 
-  <div class="col">
-    <textarea class=" card text-bg-light mb-3 box " id="4" placeholder="demo note"></textarea>
-  </div>
+		<div class
+		="col">
+			<textarea type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+				class="btn btn-primary card text-bg-light box" id="note2" placeholder="demo note"
+				data-bs-whatever="Note 2"></textarea>
+		</div>
 
-</div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+		<div class="col ">
+			<textarea type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+				class="btn btn-primary card text-bg-light box chooseNote" id="note3" placeholder="demo note"
+				data-bs-whatever="Note 3">
+    </textarea>
+		</div>
+
+		<div class="col">
+			<textarea type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+				class="btn btn-primary card text-bg-light box" id="note4" placeholder="demo note"
+				data-bs-whatever="Note 4"></textarea>
+		</div> -->
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog odal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="exampleModalLabel">Note</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<textarea id="modalText" class="w-100" style="min-height:150px"></textarea>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary" onclick="updateNote()">Save changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
+	<script src="script.js"></script>
+
 </body>
 
 </html>
