add notes on clicking submit button

--- a/index.html
+++ b/index.html
@@ -53,27 +53,26 @@
 	<div class="row" style="--bs-gutter-x: 0rem !important ">
 		<div class="col-md-12 ">
 			<form method="GET" class="d-flex createNoteContainer">
-				<textarea class=" card text-bg-light w-50 createNote" id="writeNote" placeholder="Take a note..."
+				<textarea class=" card text-bg-light w-50 createNote" id="writeNote" placeholder="Create a note..."
 					name="note"></textarea>
 				<button class="btn btn-outline-success align-self-end" type="button"
 					onclick='createNote()'>Submit</button>
 			</form>
 		</div>
 	</div>
-
-	<div class="container">
-		<div class="row row-cols-sm-3 row-cols-f2 row-cols-md-4 g-4 " style="--bs-gutter-x: 0rem !important "
-			id="notesResidence">
-			<!-- On click call function to make them invisble and not take space on website -->
-
-			<div class="col">
-				<section type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
-					class="btn btn-primary card text-bg-light box chooseNote" id="note1" data-bs-whatever="Note 1">
-				</section>
-			</div>
+	
+		<div class="row"  style="--bs-gutter-x: 0rem !important " id="notesResidence">
+		
 		</div>
-	</div>
 
+		<!-- <div class="row row-cols-sm-3 row-cols-md-4 g-4 " style="--bs-gutter-x: 0rem !important "
+			id="notesResidence">
+			On click call function to make them invisble and not take space on website
+
+			
+		</div> -->
+	
+	
 	
 	<!-- 	
 
