--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</ul>
 				<form class="d-flex" role="search">
 					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success" type="submit">Search</button>
+					<button class="btn btn-outline-success" type="submit" >Search</button>
 				</form>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 
 
 
-	<!-- Notes -->
+	<!-- Create a Note here -->
 	<div class="row" style="--bs-gutter-x: 0rem !important ">
 		<div class="col-md-12 ">
 			<form method="GET" class="d-flex createNoteContainer">
@@ -60,25 +60,27 @@
 			</form>
 		</div>
 	</div>
-
+<!-- Notes added here -->
 	<div class="row" style="--bs-gutter-x: 0rem !important " id="notesResidence">
 
 	</div>
 
 
 
-
+`
 	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog odal-dialog-scrollable">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h1 class="modal-title fs-5" id="exampleModalLabel">Note</h1>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
-				<div class="modal-body">
+
+				<div class="modal-body input">
 					<textarea id="modalText" class="w-100" style="min-height:150px"></textarea>
 				</div>
+
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 					<button type="button" class="btn btn-primary" onclick="updateNote()">Save changes</button>
