--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">Take Notes</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+			<!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-			</button>
-			Work in progress :)
+			</button> -->
 			<!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
 				<!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
 					<!-- <li class="nav-item">
@@ -84,7 +83,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary" onclick="updateNote()">Save changes</button>
+					<button id="updateNote" type="button" class="btn btn-primary" >Save changes</button>
 				</div>
 			</div>
 		</div>
