--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 					<textarea id="modalText" class="w-100" style="min-height:150px"></textarea>
 				</div>
 
-				<div class="modal-footer">
+				<div class="modal-footer d ">
+					<button id="deleteNote" type="button" class="btn btn-danger d-flex justify-content-start">Delete</button>
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 					<button id="updateNote" type="button" class="btn btn-primary" >Save changes</button>
 				</div>
