--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body onload="loadNotes()">
 
 	<!-- NAVBAR -->
 
@@ -46,7 +46,7 @@
 		</div>
 	</nav>
 
-
+	
 
 
 	<!-- Create a Note here -->
@@ -65,13 +65,18 @@
 
 	</div>
 
-
-
-`
 	<!-- Modal -->
 	 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog odal-dialog-scrollable">
 			<div class="modal-content">
+				<div class="alert alert-success alert-dismissable fade show">
+					<button type="button" class="close" data-bs-dismiss="alert" aria-hidden="true">&times;</button>
+					Note updated successfully.
+				</div>
+				<div class="alert alert-danger alert-dismissable fade show">
+					<button type="button" class="close" data-bs-dismiss="alert" aria-hidden="true">&times;</button>
+					Note deleted.
+				</div>
 				<div class="modal-header">
 					<h1 class="modal-title fs-5" id="exampleModalLabel">Note</h1>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -94,8 +99,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 		crossorigin="anonymous"></script>
-	<script src="script.js"></script>
-
+	<script src="script.js" ></script>
 </body>
 
 </html>
